$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- allow fragmented ESP and NAT-T encapsulated IPsec packets when using the
  integrated IPsec support (should solve MTU issues)

- added patch to make mini_httpd accept intermediate SSL CA certificates
  (contributed by Bernie O'Connor)

- use NTP vendor pool zone for m0n0wall instead of pool.ntp.org (this will
  also be automatically replaced in existing installations on the first
  boot)

- fix MSNTP to properly handle server hostnames that start with a digit

- updated base system to FreeBSD 6.3-RELEASE-p1

- copied dhclient-script from m0n0wall 1.233 (in an attempt at solving the
  sporadic DHCP renewal problems reported by some users)

- fix MPD WAN PPPoE/PPTP auto-reconnect issue

- webGUI HTML tidyness fixes by Daniel S. Haischt

- put IPSTEALTH in kernel config so that it can be enabled via sysctl
  if needed

- updated ipsec-tools to 0.7


1.3b9
-----

- added patch for trap 12 kernel panics on Nokia IP110/IP120/IP130
  (thanks to Bruce Walter)

- increased MFS root size by 1 MB to avoid problems with large configs

- fixed bridging with interfaces that support hardware TX checksumming
  (by turning it off)


1.3b8
-----

- updated MPD to 4.4 (also fixed AT&T/Bellsouth secondary DNS reject
problem) - removes RADIUS IP option

- updated PHP to 4.4.8

- exposed DHCP next-server and filename options via webGUI


1.3b7
-----

- fixed kernel panic when using IPsec and the traffic shaper at the same
  time (see FreeBSD PR kern/119036)

- fixed SIP proxy when using PPPoE/PPTP mode on WAN interface


1.3b6
-----

- fixed filtering bridge when used in conjunction with traffic shaper

- enabled larger client subnet sizes (= more concurrent connections) for
  PPTP VPN server (up to 256)

- updated timezone data

- captive portal reliability fixes (locking, treatment of sessions that